--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/datastore": "^7.0.0",
+    "axios": "^0.21.4",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "googleapis": "^109.0.1",
     "node-json2html": "^2.2.2"
   }
 }
