Hid client id/secret

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "DATA_BACKEND": "datastore",
-    "GCLOUD_PROJECT": "[portfolio-ellisos2]"
+    "GCLOUD_PROJECT": "[portfolio-ellisos2-370318]"
 }
